connect gui to db-backend api